--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5159,7 +5159,7 @@ textarea:-ms-input-placeholder {
 }
 .product_thumb img {
   width: 100%;
-  /* height: 375px; */
+  height: 375px;
 }
 
 .slick_navigation > button {
@@ -6845,7 +6845,7 @@ span.ui-slider-handle.ui-corner-all.ui-state-default {
 }
 @media only screen and (max-width: 767px) {
   .hero_banner2 .hero_banner_inner {
-    padding: 70px 0;
+    padding: 10px 0;
   }
 }
 
@@ -6921,6 +6921,9 @@ span.ui-slider-handle.ui-corner-all.ui-state-default {
     font-size: 20px;
     line-height: 28px;
   }
+  .newme {
+      margin-top: 160px;
+  }
 }
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .banner_section2 .banner_text h3 {
@@ -6934,6 +6937,9 @@ span.ui-slider-handle.ui-corner-all.ui-state-default {
     line-height: 33px;
     margin-bottom: 14px;
   }
+  .newme {
+    margin-top: 160px;
+}
 }
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .banner_section2 .banner_text h2 {
@@ -6941,6 +6947,9 @@ span.ui-slider-handle.ui-corner-all.ui-state-default {
     line-height: 26px;
     margin-bottom: 12px;
   }
+  .newme {
+    margin-top: 0px !important;
+}
 }
 .banner_section2 .banner_text a.btn.btn-link {
   font-size: 13px;
@@ -6956,31 +6965,49 @@ span.ui-slider-handle.ui-corner-all.ui-state-default {
   .featured_banner_section {
     padding: 0 15px;
   }
+  /* .newme {
+    margin-top: 0px !important;
+} */
 }
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .featured_banner_section {
     padding: 0;
   }
+  .newme {
+    margin-top: 0px !important;
+}
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .featured_banner_section {
     padding: 0;
   }
+  .newme {
+    margin-top: 0px !important;
+}
 }
 @media only screen and (max-width: 767px) {
   .featured_banner_section {
     padding: 0;
   }
+  .newme {
+    margin-top: 0px !important;
+}
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .featured_banner_section.mb-100 {
     margin-bottom: 70px;
   }
+  .newme {
+    margin-top: 0px !important;
+}
 }
 @media only screen and (max-width: 767px) {
   .featured_banner_section.mb-100 {
     margin-bottom: 50px;
   }
+  .newme {
+    margin-top: 0px !important;
+}
 }
 
 .row.featured_banner_inner {
@@ -8614,4 +8641,8 @@ span.ui-slider-handle.ui-corner-all.ui-state-default {
   width: 100%;
   border: 1px solid transparent;
   cursor: pointer;
+}
+
+.newme{
+    margin-top: 180px;
 }
